<resources>
    <string name="app_name">Fox</string>

    <string name="menu_home">Home</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_charts">Charts</string>
    <string name="menu_pay">Pay</string>
    <string name="menu_sell">Sell</string>

    <string name="details_button">Details</string>
    <string name="pay_button">PAY</string>
    <string name="sell_button">SELL</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="your_balance">Your Balance</string>

    <string name="title_activity_transaction">Transaction Completed</string>
    <string name="you_received">You received</string>
    <string name="you_sent">You sent</string>
    <string name="transaction_time">Time</string>
    <string name="transaction_confirmations">Confirmations</string>
    <string name="transaction_fee">Transaction Fee</string>
    <string name="transaction_status">Status</string>

    <string name="chart_description">The price of Bitcoin over the last year</string>
    <string name="usd_to_btc">USD to BTC</string>
    
    <string name="bitcoin_address">Bitcoin Address</string>
    <string name="bitcoin_amount">BTC Amount</string>
    <string name="tap_devices">Tap your devices to pay</string>
    <string name="continue_button">CONTINUE</string>
    <string name="title_activity_paying">Paying</string>

    <string name="title_activity_authenticate">Authenticate</string>
    <string name="welcome">WELCOME!</string>
    <string name="get_started">To get started, add your Bitcoin wallet</string>
    <string name="coinbase">Coinbase</string>
    <string-array name="wallet_providers">
        <item>Blockchain</item>
        <item>Coinbase</item>
    </string-array>

    <string name="title_activity_loading">Loading</string>
    <string name="title_activity_selling">Selling</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
