<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="20dp" android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background" android:orientation="vertical">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow"
        android:paddingTop="13dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingBottom="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_balance"
            android:layout_gravity="start|center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4.00732 BTC"
            android:layout_gravity="end|center_vertical" />
    </FrameLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow"
        android:orientation="vertical"
        android:paddingTop="13dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingBottom="18dp">

        <EditText
            android:id="@+id/amountText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bitcoin_amount"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:imeOptions="normal" />

        <TextView
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_button"
            android:textColor="@color/disabled"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:onClick="onClick" />
    </LinearLayout>
</LinearLayout>
